...
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/list_item_padding"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/list_item_padding">

        <CheckBox
            android:id="@+id/check_box_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/list_item_padding"
            android:checked="@{task.isDone}"
            android:minWidth="0dp"
...
